infrastructure/cdk/cdk.out/ChicFinderStack.template.json
{
 "Resources": {
  "NetworkingVpc6B5E6F44": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/Resource"
   }
  },
  "NetworkingVpcpublicSubnet1SubnetEC29329E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet1/Subnet"
   }
  },
  "NetworkingVpcpublicSubnet1RouteTable2E3445F2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet1/RouteTable"
   }
  },
  "NetworkingVpcpublicSubnet1RouteTableAssociation97DD2CA1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcpublicSubnet1RouteTable2E3445F2"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcpublicSubnet1SubnetEC29329E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "NetworkingVpcpublicSubnet1DefaultRoute90D9E52F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkingVpcIGW21218DAB"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcpublicSubnet1RouteTable2E3445F2"
    }
   },
   "DependsOn": [
    "NetworkingVpcVPCGW12E561D8"
   ],
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "NetworkingVpcpublicSubnet1EIP42C94C3B": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet1/EIP"
   }
  },
  "NetworkingVpcpublicSubnet1NATGateway0DDF99AC": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NetworkingVpcpublicSubnet1EIP42C94C3B",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NetworkingVpcpublicSubnet1SubnetEC29329E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "NetworkingVpcpublicSubnet1DefaultRoute90D9E52F",
    "NetworkingVpcpublicSubnet1RouteTableAssociation97DD2CA1"
   ],
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet1/NATGateway"
   }
  },
  "NetworkingVpcpublicSubnet2SubnetB1EC0FB5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet2/Subnet"
   }
  },
  "NetworkingVpcpublicSubnet2RouteTable8AA4DF78": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet2/RouteTable"
   }
  },
  "NetworkingVpcpublicSubnet2RouteTableAssociationCD7AC5EA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcpublicSubnet2RouteTable8AA4DF78"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcpublicSubnet2SubnetB1EC0FB5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "NetworkingVpcpublicSubnet2DefaultRoute5F0CBE68": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkingVpcIGW21218DAB"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcpublicSubnet2RouteTable8AA4DF78"
    }
   },
   "DependsOn": [
    "NetworkingVpcVPCGW12E561D8"
   ],
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "NetworkingVpcprivateSubnet1Subnet7D313D7C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet1/Subnet"
   }
  },
  "NetworkingVpcprivateSubnet1RouteTableBA07DE42": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet1/RouteTable"
   }
  },
  "NetworkingVpcprivateSubnet1RouteTableAssociation325591CC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcprivateSubnet1RouteTableBA07DE42"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcprivateSubnet1Subnet7D313D7C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "NetworkingVpcprivateSubnet1DefaultRoute27594507": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkingVpcpublicSubnet1NATGateway0DDF99AC"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcprivateSubnet1RouteTableBA07DE42"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet1/DefaultRoute"
   }
  },
  "NetworkingVpcprivateSubnet2Subnet390F8998": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet2/Subnet"
   }
  },
  "NetworkingVpcprivateSubnet2RouteTable6A66AAB8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet2/RouteTable"
   }
  },
  "NetworkingVpcprivateSubnet2RouteTableAssociation0175E56E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkingVpcprivateSubnet2RouteTable6A66AAB8"
    },
    "SubnetId": {
     "Ref": "NetworkingVpcprivateSubnet2Subnet390F8998"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "NetworkingVpcprivateSubnet2DefaultRouteCF8934E9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkingVpcpublicSubnet1NATGateway0DDF99AC"
    },
    "RouteTableId": {
     "Ref": "NetworkingVpcprivateSubnet2RouteTable6A66AAB8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/privateSubnet2/DefaultRoute"
   }
  },
  "NetworkingVpcIGW21218DAB": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChicFinderStack/Networking/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/IGW"
   }
  },
  "NetworkingVpcVPCGW12E561D8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NetworkingVpcIGW21218DAB"
    },
    "VpcId": {
     "Ref": "NetworkingVpc6B5E6F44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/Networking/Vpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOwQqDMBBEv8V7TK0t3kVK8VKCFq9lTbeYqklJNhUR/72IRU8z8xiGiXmcJDwKYHChfLZhp2o+lQSyZTC4B8qYT9VHsuylK5Ex4etOydLXGmlhuyuMJ7xD3eHOd5Y6Z6QCUkZv5cVccrHIDegKhAOMTFj1BcJ9ONeEVuNWWJ/8U0oEsulR08wKdMZbiTMTIzVGH078eOZR8HZKhdZrUj3yYtUfo34GU/cAAAA="
   },
   "Metadata": {
    "aws:cdk:path": "ChicFinderStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
